propagating dynamics (step 1 UKF) done

--- a/hw2/p2/test_p2_UKF.ipynb
+++ b/hw2/p2/test_p2_UKF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial.transform import Rotation\n",
+    "from scipy.linalg import sqrtm\n",
     "from quaternion import Quaternion\n",
+    "import math\n",
     "from estimate_rot import accel_calib_params, accel_calibration, gyro_calib_params, gyro_calibration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,29 +63,331 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialization\n",
+    "choose the values of the initial covariance of the state, dynamics noise and measurement noise"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 1212\n",
+    "np.random.seed(seed)\n",
+    "n = 6\n",
+    "# state covariance initialized\n",
+    "cov0 = np.array([0.5, 0.5, 0.5, 0.5, 0.5, 0.5]) # 6-dimension vector, similar dimension with process noise vector w_k =(w_{quaternion}, w_{angular velo})\n",
+    "\n",
+    "cov_k_k = np.diag(cov0) #6x6 matrix\n",
+    "\n",
+    "# initialize mu state\n",
+    "mu0 = np.array([[0.5, 0., -0.6, 1, 1, 1]]).T # mean vector of orientation data and angular velo\n",
+    "Q_mu = Quaternion()\n",
+    "Q_mu.from_axis_angle(mu0[:3].reshape(-1))\n",
+    "mu_k_k = (Q_mu.q, mu0[3], mu0[4], mu0[5]) # a 7-d vector (first 4 for quaternion, remaining 3 for angular velo)\n",
+    "\n",
+    "# process noise/dynamic noise\n",
+    "R = np.array([0.1, 0.1, 0.1, 0.1, 0.1, 0.1])\n",
+    "R = np.diag(R)\n",
+    "dt = 0.01 # this varies. Replace by t_{k+1} - t_k in the loop\n",
+    "\n",
+    "# measurement noise:\n",
+    "Q = ...\n",
+    "\n",
+    "# initial state\n",
+    "# X0 = [float(np.random.normal(mu0[i], np.sqrt(cov0[i]), 1)) for i in range(n)]\n",
+    "# Q_state = Quaternion()\n",
+    "# Q_state.from_axis_angle(X0[:3])\n",
+    "# w0_x, w0_y, w0_z = 0, 0, 0\n",
+    "# state = (Q_state.q, w0_x, w0_y, w0_z)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate sigma points \n",
+    " \n",
+    "Given n= 6 => we will have 12 sigma points\n",
+    "\n",
+    "First computing square root of covariance \n",
+    "\n",
+    "Then transform first 3 elements to quaternion (axis-angle form), before \"adding\" to mu_x (quaternion multiplication for first 4 elements and pure addition for 3 angular velo elements)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8609792490763984e-17\n",
+      "2.8609792490763984e-17\n",
+      "2.8609792490763984e-17\n",
+      "3.0068540250264654e-17\n",
+      "3.1031676915590914e-17\n",
+      "1.6679025177028005e-17\n",
+      "1.6679025177028005e-17\n",
+      "5.171946152598485e-17\n",
+      "2.8609792490763984e-17\n",
+      "4.944553638389996e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.1031676915590914e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "2.1820464722267795e-17\n",
+      "1.976197850111478e-17\n",
+      "2.1820464722267795e-17\n",
+      "3.0068540250264654e-17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first compute the square root\n",
+    "sqrt_cov = sqrtm(cov_k_k + R*dt)\n",
+    "sqrt_cov_cols = np.concatenate((sqrt_cov * np.sqrt(n), sqrt_cov * (-np.sqrt(n))), axis = 1)\n",
+    "\n",
+    "sigma_q = []\n",
+    "\n",
+    "# q_bar can be initialized from quaternion of the previous state ( mu_{k|k}). Will do this in the loop\n",
+    "Q_bar = Quaternion(scalar = mu_k_k[0][0], vec = mu_k_k[0][1:4] )\n",
+    "# Q_bar = Quaternion()\n",
+    "# Q_bar = Q_state\n",
+    "error = np.zeros((3, 2*n))\n",
+    "\n",
+    "for i in range(2*n):\n",
+    "    Q_sigma = Quaternion( ) #convert first 3 elements of col vector to axis-angle\n",
+    "    Q_sigma.from_axis_angle(sqrt_cov_cols[:3, i])\n",
+    "\n",
+    "\n",
+    "    # Adding to mu_x\n",
+    "    quat = Q_bar * Q_sigma # multiply axis-angle form of square root of covariance with the quaternion element in the state\n",
+    "    sigma_q.append( quat.q )\n",
+    "    \n",
+    "    # Gradient descent\n",
+    "    Q_error = quat * Q_bar.inv()\n",
+    "    Q_error.normalize()\n",
+    "    error[:,i] = Q_error.axis_angle() # convert error vector to axis-angle representation\n",
+    "\n",
+    "error_bar = np.sum(error, axis = 1)/ (2*n)\n",
+    "Q_error_bar = Quaternion()\n",
+    "Q_error_bar.from_axis_angle(error_bar)\n",
+    "Q_bar = Q_error_bar * Q_bar\n",
+    "\n",
+    "for iter in range(100):\n",
+    "    error = np.zeros((3, 2*n))\n",
+    "    for i in range(2*n):\n",
+    "        quat = Quaternion(scalar=sigma_q[i][0], vec=sigma_q[i][1:4])\n",
+    "        # print(quat)\n",
+    "        Q_error = quat * Q_bar.inv()\n",
+    "        Q_error.normalize()\n",
+    "        # print(Q_error)\n",
+    "        error[:,i] = Q_error.axis_angle()\n",
+    "    # print(error)\n",
+    "    error_bar = np.sum(error, axis = 1)/ (2*n)\n",
+    "    # print(error_bar)\n",
+    "    error_norm = np.linalg.norm(error_bar)\n",
+    "    print(error_norm)\n",
+    "\n",
+    "    Q_error_bar.from_axis_angle(error_bar)\n",
+    "    Q_bar = Q_error_bar * Q_bar \n",
+    "weight = 1/(2*n)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "q_bar is new state mean of the quaternion part of sigma points.\n",
+    "\n",
+    "Now calculate covariance for quaternion of each sigma point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.82533561, 0.56464247, 0.56464247, 0.56464247]), 0, 0, 0)"
+       "array([[ 5.01000000e-01,  2.08166817e-17, -3.46944695e-17],\n",
+       "       [ 2.08166817e-17,  5.01000000e-01, -2.77555756e-17],\n",
+       "       [-3.46944695e-17, -2.77555756e-17,  5.01000000e-01]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q = Quaternion(scalar = 1, vec = [2,3,4]) \n",
-    "w0_x, w0_y, w0_z = 0, 0, 0\n",
-    "state = (Q.q, w0_x, w0_y, w0_z)\n",
-    "\n",
-    "Q.from_axis_angle(1.2)\n",
-    "state\n"
+    "sigma_cov_q = np.zeros((3,3))\n",
+    "for i in range(2*n):\n",
+    "    sigma_cov_q += (error[:,i] - error_bar).reshape(3,1) @ (error[:,i] - error_bar).reshape(1,3) /(2*n)\n",
+    "sigma_cov_q"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The estimate of the mean and covariance for the angular velocity, which is a Euclidean vector, are obtained in the standard way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_w = np.array([np.array(mu_k_k[1:4]).reshape(-1) + sqrt_cov_cols[3:, 0] for i in range(2*n)]).T #state in here refers to mu_k|k\n",
+    "\n",
+    "# mu\n",
+    "sigma_mu_w = np.array([ np.sum(weight * (mu_k_k[j+1] + sigma_w[j, :])) for j in range(3)]) \n",
+    "sigma_cov_w = np.zeros((3,3))\n",
+    "for i in range(12):\n",
+    "    diff = ((np.array(mu_k_k[1:4]).reshape(-1) + sigma_w[:,i]) - sigma_mu_w).reshape(3,1)\n",
+    "    sigma_cov_w += weight * (diff @ diff.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predicted mu and covariance of state\n",
+    "mu_k1_k = (Q_bar.q, sigma_mu_w[0], sigma_mu_w[1], sigma_mu_w[2])\n",
+    "\n",
+    "cov_k1_k = np.zeros((6,6))\n",
+    "cov_k1_k[:3, :3] = sigma_cov_q\n",
+    "cov_k1_k[3:, 3:] = sigma_cov_w"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now, MEASUREMENT UPDATE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
