code done. begin debugging

--- a/hw2/p2/test_p2_UKF.ipynb
+++ b/hw2/p2/test_p2_UKF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,26 @@
     "from scipy.linalg import sqrtm\n",
     "from quaternion import Quaternion\n",
     "import math\n",
-    "from estimate_rot import accel_calib_params, accel_calibration, gyro_calib_params, gyro_calibration"
+    "from estimate_rot import estimate_rot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'accel_calib_params' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      6\u001b[0m ts_imu \u001b[39m=\u001b[39m imu[\u001b[39m'\u001b[39m\u001b[39mts\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,)\n\u001b[1;32m      7\u001b[0m angle_names \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mroll\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mpitch\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39myaw\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 10\u001b[0m accel_bias, accel_sensitivity \u001b[39m=\u001b[39m accel_calib_params(accel)\n\u001b[1;32m     11\u001b[0m accel \u001b[39m=\u001b[39m accel_calibration(accel, accel_bias, accel_sensitivity)\n\u001b[1;32m     13\u001b[0m gyro_bias, gyro_sensitivity \u001b[39m=\u001b[39m gyro_calib_params(gyro)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'accel_calib_params' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data_num = 1\n",
     "imu = io.loadmat('imu/imuRaw'+str(data_num)+'.mat')\n",
@@ -44,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +323,7 @@
        "       [-3.46944695e-17, -2.77555756e-17,  5.01000000e-01]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +377,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Now, MEASUREMENT UPDATE"
+   ]
   },
   {
    "cell_type": "code",
@@ -379,14 +393,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now, MEASUREMENT UPDATE"
+    "# Test estimate_rot file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "1\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "2\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "3\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "4\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "5\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "6\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "7\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4 0.4 0.4]\n",
+      "8\n",
+      "[0.2 0.2 0.2]\n",
+      "[0.4+0.j 0.4+0.j 0.4+0.j]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tuna28ng/ESE650/hw2/p2/quaternion.py:41: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  self.q[1:4] = axis*math.sin(angle/2)\n"
+     ]
+    },
+    {
+     "ename": "UFuncTypeError",
+     "evalue": "Cannot cast ufunc 'add' output from dtype('complex128') to dtype('float64') with casting rule 'same_kind'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mestimate_rot\u001b[39;00m \u001b[39mimport\u001b[39;00m estimate_rot\n\u001b[0;32m----> 2\u001b[0m estimate_rot()\n",
+      "File \u001b[0;32m~/ESE650/hw2/p2/estimate_rot.py:98\u001b[0m, in \u001b[0;36mestimate_rot\u001b[0;34m(data_num)\u001b[0m\n\u001b[1;32m     96\u001b[0m updated_Q_bar \u001b[39m=\u001b[39m Quaternion(scalar \u001b[39m=\u001b[39m mu_k1_k[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m], vec \u001b[39m=\u001b[39m mu_k1_k[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m:\u001b[39m4\u001b[39m] )\n\u001b[1;32m     97\u001b[0m updated_sigma_q \u001b[39m=\u001b[39m generate_sigma_q(sqrt_cov_cols, updated_Q_bar)\n\u001b[0;32m---> 98\u001b[0m updated_sigma_w, _,_ \u001b[39m=\u001b[39m propagating_w(mu_k1_k, sqrt_cov_cols, R)\n\u001b[1;32m     99\u001b[0m     \u001b[39m# here: sigma_q is list of 12 quaternions Q_sigma.q and sigma_w is array size (3,12) of angular velos part of sigma points\u001b[39;00m\n\u001b[1;32m    100\u001b[0m \n\u001b[1;32m    101\u001b[0m     \u001b[39m# EK sec 2.3:\u001b[39;00m\n\u001b[1;32m    102\u001b[0m \u001b[39m# measurements models H1, H2\u001b[39;00m\n\u001b[1;32m    103\u001b[0m y_sigma_rot, y_sigma_acc \u001b[39m=\u001b[39m measurement_transform(updated_sigma_q, updated_sigma_w, Q) \n",
+      "File \u001b[0;32m~/ESE650/hw2/p2/estimate_rot.py:308\u001b[0m, in \u001b[0;36mpropagating_w\u001b[0;34m(mu_k_k, sqrt_cov_cols, R)\u001b[0m\n\u001b[1;32m    306\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mn):\n\u001b[1;32m    307\u001b[0m     diff \u001b[39m=\u001b[39m ((R[\u001b[39m3\u001b[39m:] \u001b[39m+\u001b[39m sigma_w[:,i]) \u001b[39m-\u001b[39m sigma_mu_w)\u001b[39m.\u001b[39mreshape(\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m)\n\u001b[0;32m--> 308\u001b[0m     sigma_cov_w \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m weight \u001b[39m*\u001b[39m (diff \u001b[39m@\u001b[39m diff\u001b[39m.\u001b[39mT)\n\u001b[1;32m    310\u001b[0m \u001b[39mreturn\u001b[39;00m sigma_w, sigma_mu_w, sigma_cov_w\n",
+      "\u001b[0;31mUFuncTypeError\u001b[0m: Cannot cast ufunc 'add' output from dtype('complex128') to dtype('float64') with casting rule 'same_kind'"
+     ]
+    }
+   ],
    "source": []
   }
  ],
